cmake_minimum_required(VERSION 2.6)
MACRO(SUBDIRLIST result curdir)
  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*.fd)
  SET(dirlist "")
  FOREACH(child ${children})
    IF(IS_DIRECTORY ${curdir}/${child})
      LIST(APPEND dirlist ${child})
    ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
ENDMACRO()

if(BUILD_UTIL)
  SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})
  foreach(dir ${SUBDIRS})
    message("Configuring utility in ${dir}")
    add_subdirectory(${dir})
  endforeach()
# add_subdirectory(gribmean.fd)
endif(BUILD_UTIL)

