cmake_minimum_required(VERSION 2.6)
if(BUILD_UTIL)
  file(GLOB LOCAL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.f90)
  set_source_files_properties( ${LOCAL_SRC} PROPERTIES COMPILE_FLAGS ${GSI_Fortran_FLAGS} )
  set( PLOCAL_SRC ${LOCAL_SRC} )
  list( REMOVE_ITEM LOCAL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/pmain.f90 )
  list( REMOVE_ITEM PLOCAL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/main.f90 )
  add_executable(calc_inc.x  ${LOCAL_SRC} )
  add_executable(p_calc_inc.x  ${PLOCAL_SRC} )
  set_target_properties( calc_inc.x PROPERTIES COMPILE_FLAGS ${UTIL_Fortran_FLAGS} )
  set_target_properties( p_calc_inc.x PROPERTIES COMPILE_FLAGS ${UTIL_Fortran_FLAGS} )
  SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${OMPFLAG}" )
  include_directories( ${CORE_INCS} ${NETCDF_INCLUDES} ) 
  target_link_libraries( calc_inc.x ${CORE_LIBRARIES} ${NETCDF_LIBRARIES_F90} ${NETCDF_LIBRARIES} )
  target_link_libraries( p_calc_inc.x ${CORE_LIBRARIES} ${NETCDF_LIBRARIES_F90} ${NETCDF_LIBRARIES} )
endif()
